Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
-
Untriaged
-
1
-
Unknown
Description
Jemalloc does not support profiling on macos and this makes the profiling conf invalid on macos. If server is built in debug mode, then invalid conf causes abort. From Trond on #indexing:
Service 'index' exited with status 134. Restarting. Messages: |
<jemalloc>: Invalid conf pair: prof:true |
<jemalloc>: Invalid conf pair: prof_active:false |
<jemalloc>: Abort (abort_conf:true) on invalid conf value (see above). |
(repeated 11 times, last seen 1.198816 secs ago) |