MB-53957: Configure jemalloc profiling only for linux

Change-Id: Ibd96c248eb954071f2f8c4e8afc17a56d9c7d8c5